Resolve conditional statement to check for type